force-app/main/default/objects/IM_Customer_Account__c/fields/NA_PY_YTD_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>NA_PY_YTD_TOTAL__c</fullName>
    <formula>NA_PY_YTD_Consulting__c + NA_PY_YTD_DB_R__c + NA_PY_YTD_Digital__c + NA_PY_YTD_DMS__c + NA_PY_YTD_Film_Sound__c + NA_PY_YTD_IPM__c + NA_PY_YTD_RM__c + NA_PY_YTD_Secure_Shredding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NA - PY YTD - TOTAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>