force-app/main/default/objects/IM_Customer_Account__c/fields/NAS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>NAS_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>NAS External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>