force-app/main/default/objects/IM_Customer_Account__c/fields/NAS_Strict_Authorization_Count__c.field-meta.xml
<CustomField>
    <fullName>NAS_Strict_Authorization_Count__c</fullName>
    <description>count the number of strict departments</description>
    <label>Strict Authorization Count</label>
    <summaryFilterItems>
        <field>Department__c.NAS_Strict_Authorization__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Department__c.Customer_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>