force-app/main/default/objects/IM_Customer_Account__c/fields/NAS_Strict_Authorized__c.field-meta.xml
<CustomField>
    <fullName>NAS_Strict_Authorized__c</fullName>
    <description>To indicate that the Customer Account has a least one Strict Authorized Department.</description>
    <formula>IF(NAS_Strict_Authorization_Count__c&gt;=1,True,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strict Authorized</label>
    <type>Checkbox</type>
</CustomField>