force-app/main/default/objects/IM_Customer_Account__c/fields/Notification_Days__c.field-meta.xml
<CustomField>
    <fullName>Notification_Days__c</fullName>
    <label>Notification Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>