force-app/main/default/objects/IM_Customer_Account__c/fields/of_Rate_Table_Revenue__c.field-meta.xml
<CustomField>
    <fullName>of_Rate_Table_Revenue__c</fullName>
    <label>delete_% of Rate Table Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>