force-app/main/default/objects/IM_Customer_Account__c/fields/Overall_At_Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>Overall_At_Risk_Flag__c</fullName>
    <formula>IMAGE( 
CASE(  

At_Risk_Category__c , 

&quot;High Risk&quot;, &quot;/img/msg_icons/error16.png&quot;, 
&quot;Medium Risk&quot;, &quot;/img/msg_icons/warning16.png&quot;, 
&quot;Low Risk&quot;, &quot;/img/msg_icons/confirm16.png&quot;,

&quot;/s.gif&quot;), 
&quot;NULL&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A red flag = high risk.
A yellow flag = medium risk.
A green flag = low risk.</inlineHelpText>
    <label>Customer Account Risk Flag</label>
    <type>Text</type>
</CustomField>