force-app/main/default/objects/IM_Customer_Account__c/fields/Overall_At_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_At_Risk_Score__c</fullName>
    <description>This is the overall at-risk score across all three product lines.</description>
    <inlineHelpText>This is the overall at-risk score across all three product lines on a scale of 0-10.</inlineHelpText>
    <label>Overall At Risk Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>