force-app/main/default/objects/IM_Customer_Account__c/fields/Overall_Price__c.field-meta.xml
<CustomField>
    <fullName>Overall_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The percentage of risk attributed to this particular category code.</inlineHelpText>
    <label>Overall Contract Indicators</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>