force-app/main/default/objects/IM_Customer_Account__c/fields/Overall_Service__c.field-meta.xml
<CustomField>
    <fullName>Overall_Service__c</fullName>
    <description>This is the overall service score across all three product lines.</description>
    <inlineHelpText>The percentage of risk attributed to this particular category code.</inlineHelpText>
    <label>Overall Geography or Industry</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>