force-app/main/default/objects/IM_Customer_Account__c/fields/Owning_District_Id__c.field-meta.xml
<CustomField>
    <fullName>Owning_District_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owning District Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Market__c.InActive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Customer Accounts</relationshipLabel>
    <relationshipName>Customer_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>