force-app/main/default/objects/IM_Customer_Account__c/fields/Pricing_Program__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Program__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>delete_Pricing Program</label>
    <type>Text</type>
</CustomField>