force-app/main/default/objects/IM_Customer_Account__c/fields/Prior_Year_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Total_Revenue__c</fullName>
    <description>Invoiced revenue from all business lines for the prior calendar year.</description>
    <formula>Prior_Year_DBR_Revenue__c + Prior_Year_DMS_Revenue__c + Prior_Year_Other_Revenue__c + Prior_Year_RM_Revenue__c + Prior_Year_Shred_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoiced revenue from all business lines for the prior calendar year.</inlineHelpText>
    <label>Prior Year Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>