force-app/main/default/objects/IM_Customer_Account__c/fields/Product_Lines_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Product_Lines_At_Risk__c</fullName>
    <description>The Product Line value from the associated At Risk Assessment. Populated by workflow/ field update</description>
    <inlineHelpText>The Product Line value from the associated At Risk Assessment. Populated by workflow/ field update</inlineHelpText>
    <label>delete_Product Lines At Risk</label>
    <length>20</length>
    <type>Text</type>
</CustomField>