force-app/main/default/objects/IM_Customer_Account__c/fields/PY_Avg_Monthly_Rev_Total__c.field-meta.xml
<CustomField>
    <fullName>PY_Avg_Monthly_Rev_Total__c</fullName>
    <formula>NA_PY_Full_Year_TOTAL__c  /12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average amount of revenue customer spent per month.</inlineHelpText>
    <label>PY Avg Monthly Rev - Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>