force-app/main/default/objects/IM_Customer_Account__c/fields/Rate_Increase_Cap__c.field-meta.xml
<CustomField>
    <fullName>Rate_Increase_Cap__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Increase Cap</label>
    <type>Text</type>
</CustomField>