force-app/main/default/objects/IM_Customer_Account__c/fields/Rate_Table_ID__c.field-meta.xml
<CustomField>
    <fullName>Rate_Table_ID__c</fullName>
    <label>Rate Table ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>