force-app/main/default/objects/IM_Customer_Account__c/fields/Renewal_ERID__c.field-meta.xml
<CustomField>
    <fullName>Renewal_ERID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ERID selected by the user for this renewal case</description>
    <label>Renewal ERID</label>
    <type>Checkbox</type>
</CustomField>