force-app/main/default/objects/IM_Customer_Account__c/fields/Retained_Date__c.field-meta.xml
<CustomField>
    <fullName>Retained_Date__c</fullName>
    <description>The date the Risk Status on the Customer Account was set to ‘Retained’.</description>
    <inlineHelpText>The date the Risk Status on the Customer Account was set to ‘Retained’.</inlineHelpText>
    <label>Retained Date</label>
    <type>DateTime</type>
</CustomField>