force-app/main/default/objects/IM_Customer_Account__c/fields/Retained_Terminated_Date__c.field-meta.xml
<CustomField>
    <fullName>Retained_Terminated_Date__c</fullName>
    <inlineHelpText>Please update the At Risk Status then fill in this date.</inlineHelpText>
    <label>Retained/Terminated Date</label>
    <type>Date</type>
</CustomField>