force-app/main/default/objects/IM_Customer_Account__c/fields/Retained_Terminated_Description__c.field-meta.xml
<CustomField>
    <fullName>Retained_Terminated_Description__c</fullName>
    <inlineHelpText>If Retained: Please enter the steps taken to save this account 
If Terminated: Please enter the reason for termination.</inlineHelpText>
    <label>Retained/Terminated Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>