force-app/main/default/objects/IM_Customer_Account__c/fields/Revenue_Size_Segment__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Size_Segment__c</fullName>
    <label>Revenue Size Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>