force-app/main/default/objects/IM_Customer_Account__c/fields/Risk_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Entered_Date__c</fullName>
    <description>The date the Risk Status on the Customer Account was set to ‘At Risk’.</description>
    <inlineHelpText>The date the Risk Status on the Customer Account was set to ‘At Risk’.</inlineHelpText>
    <label>Risk Entered Date</label>
    <type>DateTime</type>
</CustomField>