force-app/main/default/objects/IM_Customer_Account__c/fields/Risk_Stage__c.field-meta.xml
<CustomField>
    <fullName>Risk_Stage__c</fullName>
    <label>delete_Risk Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not At Risk</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Retained</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>