force-app/main/default/objects/IM_Customer_Account__c/fields/Risk_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status_Comments__c</fullName>
    <description>Add additional notes and information that explains the Risk Status value</description>
    <inlineHelpText>Add additional notes and information that explains the Risk Status value</inlineHelpText>
    <label>Risk Status Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>