force-app/main/default/objects/IM_Customer_Account__c/fields/RM_At_RIsk_Category__c.field-meta.xml
<CustomField>
    <fullName>RM_At_RIsk_Category__c</fullName>
    <formula>IF( RM_At_Risk_Score__c &gt;= 10, &quot;High Risk&quot;, 
IF( RM_At_Risk_Score__c &gt;= 7, &quot;Medium Risk&quot;, &quot;Low Risk&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM At RIsk Category</label>
    <type>Text</type>
</CustomField>