force-app/main/default/objects/IM_Customer_Account__c/fields/RM_At_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>RM_At_Risk_Score__c</fullName>
    <label>RM At Risk Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>