force-app/main/default/objects/IM_Customer_Account__c/fields/RM_Monthly_Value__c.field-meta.xml
<CustomField>
    <fullName>RM_Monthly_Value__c</fullName>
    <inlineHelpText>Current monthly revenue from billings for the Revenue Management business line.</inlineHelpText>
    <label>RM Monthly Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>