force-app/main/default/objects/IM_Customer_Account__c/fields/RM_Reason_Code_3__c.field-meta.xml
<CustomField>
    <fullName>RM_Reason_Code_3__c</fullName>
    <description>#3 reason attributed to why account is at risk, ranked in order of importance.</description>
    <inlineHelpText>#3 reason attributed to why account is at risk, ranked in order of importance.</inlineHelpText>
    <label>RM Reason Code 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>