force-app/main/default/objects/IM_Customer_Account__c/fields/RM_Reason_Value_5__c.field-meta.xml
<CustomField>
    <fullName>RM_Reason_Value_5__c</fullName>
    <inlineHelpText>The corresponding percentage score against the reason code</inlineHelpText>
    <label>RM Reason Value 5</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>