force-app/main/default/objects/IM_Customer_Account__c/fields/RM_Service__c.field-meta.xml
<CustomField>
    <fullName>RM_Service__c</fullName>
    <inlineHelpText>The percentage of risk attributed to this particular category code.</inlineHelpText>
    <label>RM Geography or Industry</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>