force-app/main/default/objects/IM_Customer_Account__c/fields/Rush_Delivery_Hours__c.field-meta.xml
<CustomField>
    <fullName>Rush_Delivery_Hours__c</fullName>
    <label>Rush Delivery Hours</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>