force-app/main/default/objects/IM_Customer_Account__c/fields/Self_Service_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Self_Service_Eligibility__c</fullName>
    <description>Updating the new picklist values #27603</description>
    <label>Self Service Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Service Eligible - RM</fullName>
            </value>
            <value>
                <fullName>Self Service Ineligible - RM</fullName>
            </value>
            <value>
                <fullName>Self Service Eligible with Exception of Destruction orders - RM</fullName>
            </value>
            <value>
                <fullName>Self Service Mandatory - RM</fullName>
            </value>
            <value>
                <fullName>Self Service Mandatory with Exception of Destruction orders - RM</fullName>
            </value>
            <value>
                <fullName>Self Service Eligible with Exception of Pathology Orders - RM</fullName>
            </value>
            <value>
                <fullName>Self Service Eligible with Decentralized User Administration - RM</fullName>
            </value>
            <value>
                <fullName>Self Service Eligible with high user turnover. - RM</fullName>
            </value>
            <value>
                <fullName>Self Service Eligible - RM/Shred</fullName>
            </value>
            <value>
                <fullName>Self Service Ineligible - RM/Shred</fullName>
            </value>
            <value>
                <fullName>Self Service Eligible with Exception of Destruction orders - RM/Shred</fullName>
            </value>
            <value>
                <fullName>Self Service Mandatory - RM/Shred</fullName>
            </value>
            <value>
                <fullName>Self Service Mandatory with Exception of Destruction orders - RM/Shred</fullName>
            </value>
            <value>
                <fullName>Self Service Eligible with Exception of Pathology Orders - RM/Shred</fullName>
            </value>
            <value>
                <fullName>Self Service Eligible with Decentralized User Administration -RM/Shred RM</fullName>
            </value>
            <value>
                <fullName>Self Service Eligible with high user turnover. - RM/Shred</fullName>
            </value>
            <value>
                <fullName>Self Service Eligible - Shred Only</fullName>
            </value>
            <value>
                <fullName>Self Service Mandatory -Shred Only</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
                <isActive>false</isActive>
                <label>Blank</label>
            </value>
            <value>
                <fullName>Eligible</fullName>
                <isActive>false</isActive>
                <label>Eligible</label>
            </value>
            <value>
                <fullName>Excluded</fullName>
                <isActive>false</isActive>
                <label>Excluded</label>
            </value>
            <value>
                <fullName>Negligible</fullName>
                <isActive>false</isActive>
                <label>Negligible</label>
            </value>
            <value>
                <fullName>Self Service Eligible</fullName>
                <isActive>false</isActive>
                <label>Self Service Eligible</label>
            </value>
            <value>
                <fullName>Self Service Eligible with Exception of Destruction orders</fullName>
                <isActive>false</isActive>
                <label>Self Service Eligible with Exception of Destruction orders</label>
            </value>
            <value>
                <fullName>Self Service Eligible with Exception of Pathology Orders</fullName>
                <isActive>false</isActive>
                <label>Self Service Eligible with Exception of Pathology Orders</label>
            </value>
            <value>
                <fullName>Self Service Ineligible</fullName>
                <isActive>false</isActive>
                <label>Self Service Ineligible</label>
            </value>
            <value>
                <fullName>Self Service Mandatory</fullName>
                <isActive>false</isActive>
                <label>Self Service Mandatory</label>
            </value>
            <value>
                <fullName>Self Service Mandatory with Exception of Destruction orders</fullName>
                <isActive>false</isActive>
                <label>Self Service Mandatory with Exception of Destruction orders</label>
            </value>
            <value>
                <fullName>Self-Service Eligible with Decentralized User Administration</fullName>
                <isActive>false</isActive>
                <label>Self-Service Eligible with Decentralized User Administration</label>
            </value>
            <value>
                <fullName>Self-Service Eligible with high user turnover</fullName>
                <isActive>false</isActive>
                <label>Self-Service Eligible with high user turnover</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>