force-app/main/default/objects/IM_Customer_Account__c/fields/Service_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Renewal_Date__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Renewal Date</label>
    <type>Date</type>
</CustomField>