force-app/main/default/objects/IM_Customer_Account__c/fields/Shred_At_RIsk_Flag__c.field-meta.xml
<CustomField>
    <fullName>Shred_At_RIsk_Flag__c</fullName>
    <formula>IMAGE( 
CASE(  

Shred_At_Risk_Category__c, 

&quot;High Risk&quot;, &quot;/img/msg_icons/error16.png&quot;, 
&quot;Medium Risk&quot;, &quot;/img/msg_icons/warning16.png&quot;, 
&quot;Low Risk&quot;, &quot;/img/msg_icons/confirm16.png&quot;,

&quot;/s.gif&quot;), 
&quot;NULL&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shred At RIsk Flag</label>
    <type>Text</type>
</CustomField>