force-app/main/default/objects/IM_Customer_Account__c/fields/Shred_At_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Shred_At_Risk_Score__c</fullName>
    <label>Shred At Risk Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>