force-app/main/default/objects/IM_Customer_Account__c/fields/Shred_Monthly_Value__c.field-meta.xml
<CustomField>
    <fullName>Shred_Monthly_Value__c</fullName>
    <inlineHelpText>Current monthly revenue from billings for the Secure Shredding business line.</inlineHelpText>
    <label>Shred Monthly Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>