force-app/main/default/objects/IM_Customer_Account__c/fields/Shred_Price__c.field-meta.xml
<CustomField>
    <fullName>Shred_Price__c</fullName>
    <inlineHelpText>The percentage of risk attributed to this particular category code.</inlineHelpText>
    <label>Shred Contract Indicators</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>