force-app/main/default/objects/IM_Customer_Account__c/fields/Shred_Reason_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Shred_Reason_Code_1__c</fullName>
    <description>#1 reason attributed to why account is at risk, ranked in order of importance.</description>
    <inlineHelpText>#1 reason attributed to why account is at risk, ranked in order of importance.</inlineHelpText>
    <label>Shred Reason Code 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>